# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml
source/: README.md  conf.py  index.rst
tests/: test_env.py
utils/: extract_source_code.py  file_ops.py  generate_rst.py  logger_setup.py  run_py_with_logging.sh
